--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+.text-me-one-regular {
+    font-family: "Text Me One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .banner {
     width: 100%;
     height: 100vh;
